[package]
name = "login_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
requires_login = { path = "requires_login" }
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
actix-session = { version = "0.7", features = ["cookie-session"] }
